# somerandomapi.py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  pyproject.toml  test.py
.github/workflows/: python-publish.yml  tests.yml
docs/: clients.rst  conf.py  enums.rst  index.rst  models.rst  whats_new.rst
docs/source/: enums.rst  errors.rst
examples/: basic.py  chatbot.py  discordpy.py
somerandomapi/: __init__.py  enums.py  errors.py  utils.py
somerandomapi/clients/: __init__.py  abc.py  animal.py  animu.py  canvas.py  chatbot.py  client.py  pokemon.py  premium.py
somerandomapi/internals/: endpoints.py  http.py
somerandomapi/models/: __init__.py  abc.py  animal_fact.py  animu.py  animu_quote.py  chatbot.py  dictionary.py  encoding.py  image.py  lyrics.py  namecard.py  pokemon.py  rankcard.py  rgb.py  tweet.py  youtube_comment.py
somerandomapi/models/welcome/: __init__.py  free.py  premium.py
somerandomapi/types/: __init__.py  animal.py  animu.py  canvas.py  chatbot.py  facts.py  http.py  img.py  others.py  pokemon.py  premium.py  welcome.py
somerandomapi/types/canvas/: filter.py  misc.py  overlay.py
tests/: test_clients.py  test_endpoints.py  test_errors_enums.py  test_exports.py  test_http_client.py  test_image.py  test_pokemon_models.py  test_utils.py
tests/models/: test_abc_model.py  test_animal_fact_model.py  test_animu_model.py  test_chatbot_model.py  test_encoding_model.py  test_image_model.py  test_lyrics_model.py  test_namecard_model.py  test_pokemon_model.py  test_rankcard_model.py  test_rgb_model.py  test_tweet_model.py  test_welcome_free_model.py  test_welcome_premium_model.py  test_youtube_comment_model.py
