[project]
name = "somerandomapi.py"
description = "A maintained wrapper for the somerandomapi API."
authors = [
    {name = "Soheab_"},
]
requires-python = ">=3.9"
keywords = [
    "https://some-random-api.com",
    "some-random-api",
    "api",
    "somerandomapi",
    "random",
    "images",
    "fun",
    "discord",
    "discord.py",
    "generation",
    "rankcard",
    "canvas",
    "welcome",
    "free",
    "open-source",
    "asyncio",
    "aiohttp",
    "async",
    "wrapper",
]
license = {file = "LICENSE"}
dependencies = [
    "aiohttp>=3.8.0,<4.0.0",
]
dynamic = ["version", "readme"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Typing :: Typed",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
docs = [
    "Sphinx==6.1",
    "sphinx_rtd_theme==1.2.*",
    "sphinx-autodoc-typehints==1.22",
    "enum-tools[sphinx]==0.9.*",
]


[tool.setuptools]
packages = [
    "somerandomapi",
    "somerandomapi.clients",
    "somerandomapi.internals",
    "somerandomapi.models",
    "somerandomapi.models.welcome",
    "somerandomapi.types",
    "somerandomapi.types.canvas",
]

[project.urls]
homepage = "https://github.com/Soheab/somerandomapi.py"
documentation ="https://somerandomapipy.readthedocs.io/"
repository = "https://github.com/Soheab/somerandomapi.py"


[tool.setuptools.dynamic]
version = {attr = "somerandomapi.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.pyright]
include = [
    "somerandomapi",
    "somerandomapi/types",
    "somerandomapi/clients",
    "somerandomapi/models",
    "somerandomapi/internals",
]
exclude = [
    "**/__pycache__",
    "_build",
    "build",
    "dist",
    "docs",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportDuplicateImport = "warning"
reportDeprecated = "warning"

[tool.coverage.run]
omit = [
    "somerandomapi/types/*",
    "*/_types.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload"
]

[tool.black]
line-length = 125

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
fix = true # default: false
line-length = 125 # default: 88
include = [
    "somerandomapi",
    "somerandomapi/types",
    "somerandomapi/clients",
    "somerandomapi/models",
    "somerandomapi/internals",
]
exclude = [
    "**/__pycache__",
    "_build",
    "build",
    "dist",
    "docs",
]
target-version = "py39"  # default: "py38"
ignore = [
    # https://docs.astral.sh/ruff/rules/undefined-local-with-import-star-usage/
    "F405"
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true # default: false
ignore-fully-untyped = true  # default: false
suppress-dummy-args = true # default: false

[tool.ruff.flake8-bandit]
check-typed-exception = true  # default: false

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true  # default: false

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.isort]
case-sensitive = true  # default: false
combine-as-imports = true  # default: false 
force-sort-within-sections = true  # default: false
force-to-top = ["future", "typing"]  # default: []
force-wrap-aliases = true  # default: false
required-imports = ["from __future__ import annotations"]  # default: []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]  # default

[tool.ruff.pydocstyle]
convention = "numpy"  # default: none
ignore-decorators = ["typing.overload"]  # default: []

[tool.ruff.pylint]
max-args = 20  # default: 5 # lets not limit ourselves :)

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true  # default: false